Fixed Suboutcome delete buttons not showing up

--- a/app/styles/elements/_suboutcome.scss
+++ b/app/styles/elements/_suboutcome.scss
@@ -1,6 +1,7 @@
 .suboutcome-container.options-shown{
 
   .suboutcome-header-title{
+
   }
 
     .options-icon {
@@ -16,6 +17,8 @@
 }
 
 .suboutcome-container {
+
+  position: relative;
 
 .btn {
   padding: 0;
